# ShareSentinel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: dependency-check.yml  security-scans.yml
config/: file_types.yml
docs/: 01-architecture-overview.md  02-event-ingestion-service.md  02-webhook-listener-service.md  03-file-processing-pipeline.md  04-text-extraction-module.md  05-image-preprocessing-module.md  06-ai-provider-abstraction.md  07-database-schema.md  08-notification-service.md  09-configuration-deployment.md  10-testing-calibration.md  azure-transcript-permissions.md  browser-auth-streaming.md  onenote-phase2-plan.md
nginx/: Dockerfile  nginx.conf
scripts/: backfill_folder_names.py  backfill_folder_sharing_links.py  backfill_folder_snapshots.py  backfill_folder_verdicts.py  backfill_lifecycle.py  backfill_lifecycle_enrollment.py  backfill_sharing_links.py  backfill_user_profiles.py  batch_second_look.py  benchmark_gemini.py  enqueue_folders_from_csv.py  enqueue_fp_retest.py  enqueue_test_data.py  export_db.sh  import_db.sh  init_db.sql  pre_public_check.sh  reprocess_av_events.py  reprocess_flagged.py  reprocess_folders.py  reprocess_missing.py  reprocess_reviewed.json  requeue_convertible_events.py  test_ai_apis.py  test_csv_pipeline.py  test_format_conversion.py  test_transcript.py  test_webhook.sh
services/dashboard/: Dockerfile  (+1 more)
services/shared/: pyproject.toml
services/shared/sharesentinel_common/: __init__.py  graph_auth.py
(+201 files in other folders)
