[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sharesentinel-common"
version = "0.1.0"
description = "Shared utilities for ShareSentinel services"
requires-python = ">=3.12"
dependencies = [
    "msal>=1.25.0",
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
include = ["sharesentinel_common*"]
